updating projects and uploading for first dashboard app deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "output.smartScroll.enabled": false
+    "output.smartScroll.enabled": false,
+    "python.terminal.activateEnvInCurrentTerminal": true
 }
