--- a/capstoneProject/requirements.txt
+++ b/capstoneProject/requirements.txt
@@ -13,7 +13,9 @@ cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
 executing==2.2.1
+filelock==3.20.3
 fonttools==4.60.1
+fsspec==2026.1.0
 gitdb==4.0.12
 GitPython==3.1.46
 idna==3.11
@@ -32,8 +34,10 @@ MarkupSafe==3.0.3
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
 mord==0.7
+mpmath==1.3.0
 narwhals==2.15.0
 nest-asyncio==1.6.0
+networkx==3.6.1
 numpy==2.3.4
 packaging==25.0
 pandas==2.3.3
@@ -58,14 +62,17 @@ rpds-py==0.30.0
 scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
+setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 stack-data==0.6.3
 statsmodels==0.14.5
 streamlit==1.52.2
+sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 toml==0.10.2
+torch==2.9.1
 tornado==6.5.2
 traitlets==5.14.3
 typing_extensions==4.15.0
